--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/floppy-disk.png?v=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>UG Sunghun Wang, Research Assistant</title>
+  <title>Undergrad Sunghun Wang, Research Assistant</title>
 </head>
 
 <body>
