--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
+  <meta name="google-site-verification" content="I_Ed5G6QchQxhyJ6gHCWQqCfEtXNG6xHNWf2r_VTWP0" />
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/floppy-disk.png?v=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Undergrad Sunghun Wang, Research Assistant</title>
+  <title>Undergrad Sunghun Wang Blog & Portfolio</title>
 </head>
 
 <body>
